--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,11 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: set up Java and Maven # Настраиваем Java и Maven.
+      - name: set up Java and Maven # Настраиваем Java
         uses: actions/setup-java@v3 
         with:
           java-version: '17'
-          distribution: 'temurin'
-          cache: maven
       - name: run tests
         run: mvn test
