--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,5 +12,7 @@ jobs:
         uses: actions/setup-java@v3 
         with:
           java-version: '17'
+          distribution: 'bullseye'
+          
       - name: run tests
         run: mvn test
