--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,6 +12,6 @@ jobs:
         uses: actions/setup-java@v3 
         with:
           java-version: '17'
-          distribution: 'bullseye'
+          distribution: 'temurin'
       - name: run tests
         run: mvn test
