--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,18 +1,29 @@
-name: github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
+name: Java CI with Gradle
+
 on:
-  push:
-    branches: [ "master", "develop" ]
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
-  check-bats-version:
+  build-and-run-tests:
+
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+
     steps:
-      - uses: actions/checkout@v3
-      - name: set up Java and Maven # Настраиваем Java и Maven.
-        uses: actions/setup-java@v3 
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: maven
-      - name: run tests
-        run: mvn test
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+
+      - name: Build with Gradle Wrapper
+        run: ./gradlew build
+
+      - name: Run tests
+        run: ./gradlew QuadraticEquationTests
