--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -30,4 +30,4 @@ jobs:
         run: ./gradlew build
 
       - name: Run tests
-        run: ./gradlew QuadraticEquationTests
+        run: ./gradlew test
