--- a/GameAbstraction/build.gradle
+++ b/GameAbstraction/build.gradle
@@ -9,7 +9,10 @@ dependencies {
     implementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     implementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
     implementation 'org.assertj:assertj-core:3.23.1'
+    implementation 'org.jetbrains:annotations:24.0.0'
     testImplementation 'junit:junit:4.13.1'
+    implementation 'org.mockito:mockito-core:4.9.0'
+    implementation 'org.mockito:mockito-junit-jupiter:4.9.0'
 }
 
 test {
