--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'otus_arch_and_patterns'
 include 'QuadraticEquation'
 include 'GameAbstraction'
 include 'GameException'
+include 'Command'
